added dashboard.js to html

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
         <script src="jquery.min.js"></script>
         <script type="text/javascript" src="jquery.jsonp-2.1.4.min.js"></script>
         <script type="text/javascript" src="jquery.blockUI.js"></script>
+        <script type="text/javascript" src="dashboard.js"></script>
         <link href="dashboard.css" media="screen" rel="stylesheet" type="text/css" />
         <script>
         //the ci address()
